<resources>
    <string name="app_name">MyFirstAndroidApp</string>

    <!-- Register -->
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="send_notification">Send Notification</string>
    <string name="registration">Registration</string>
    <string name="registered">Registered</string>
    <string name="login">Login</string>
    <string name="email_password">Enter your email and password:</string>
    <string name="email_validation">Incorrect email!</string>
    <string name="password_validation">To short password!</string>
    <string name="home">Home</string>
    <string name="age_format">Age: %d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_cars">ALL</string>
    <string name="favourite_cars">FAVORITE</string>
    <string name="details">Car details</string>
    <string name="speed_format">Speed: %dkm/h</string>
    <string name="registration_format">Registration: %s</string>
    <string name="set_title">Alert</string>
    <string name="set_message">This is alert message</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="clicked_no">Clicked no!</string>
    <string name="clicked_yes">Clicked yes!</string>
    <string name="snackbar_message">This is TextView</string>

</resources>
