<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:id="@id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@id/gender_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@id/male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:checked="true"
                android:text="@string/male"
                android:textSize="20sp" />

            <RadioButton
                android:id="@id/female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/female"
                android:textSize="20sp" />
        </RadioGroup>

        <CheckBox
            android:id="@id/send_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_notification"
            android:textSize="20sp" />

        <Button
            android:id="@id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/registration"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>